@@ -424,7 +424,7 @@ under the License.
 
     <groovy.version>4.0.0-rc-2</groovy.version>
 
-    <flowable.version>6.7.1</flowable.version>
+    <flowable.version>6.7.2</flowable.version>
 
     <camel.version>3.14.0</camel.version>
 
@@ -435,7 +435,7 @@ under the License.
     <apacheds.version>2.0.0.AM26</apacheds.version>
     <apachedirapi.version>2.0.0</apachedirapi.version>
 
-    <log4j2.version>2.17.0</log4j2.version>
+    <log4j2.version>2.17.1</log4j2.version>
     <disruptor.version>3.4.4</disruptor.version>
     
     <commons-jexl.version>3.2.1</commons-jexl.version>
@@ -652,6 +652,10 @@ under the License.
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -679,7 +683,7 @@ under the License.
       <dependency>
         <groupId>co.elastic.clients</groupId>
         <artifactId>elasticsearch-java</artifactId>
-	<version>${elasticsearch.version}</version>
+        <version>${elasticsearch.version}</version>
       </dependency>
       <dependency>
         <groupId>org.elasticsearch.client</groupId>
@@ -2204,7 +2208,7 @@ under the License.
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>9.2</version>
+              <version>9.2.1</version>
             </dependency>
           </dependencies>
           <configuration>
@@ -2633,6 +2637,31 @@ under the License.
 
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>copy-ext-images</id>
+                <phase>generate-resources</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <resources>
+                    <resource>
+                      <directory>${rootpom.basedir}/src/site/resources/images</directory>
+                      <includes>
+                        <include>apache-syncope-logo-small.jpg</include>
+                      </includes>
+                    </resource>
+                  </resources>
+                  <outputDirectory>${rootpom.basedir}/target/generated-docs/images</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
             <groupId>org.asciidoctor</groupId>
             <artifactId>asciidoctor-maven-plugin</artifactId>
             <version>2.2.1</version>
@@ -2678,7 +2707,7 @@ under the License.
                   <backend>html</backend>
                   <attributes>
                     <title>Apache Syncope ${project.version} - Getting Started</title>
-                    <imagesdir>images</imagesdir>
+                    <imagesdir>${rootpom.basedir}/target/generated-docs/images</imagesdir>
                   </attributes>
                 </configuration>
               </execution>
@@ -2695,7 +2724,7 @@ under the License.
                   <attributes>
                     <pdf-stylesdir>${basedir}/src/main/asciidoc</pdf-stylesdir>
                     <pdf-style>syncope</pdf-style>
-                    <imagesdir>${basedir}/src/main/asciidoc/images</imagesdir>
+                    <imagesdir>${rootpom.basedir}/target/generated-docs/images</imagesdir>
                   </attributes>
                 </configuration>
               </execution>
@@ -2711,7 +2740,7 @@ under the License.
                   <backend>html</backend>
                   <attributes>
                     <title>Apache Syncope ${project.version} - Reference Guide</title>
-                    <imagesdir>images</imagesdir>
+                    <imagesdir>${rootpom.basedir}/target/generated-docs/images</imagesdir>
                   </attributes>
                 </configuration>
               </execution>
@@ -2728,7 +2757,7 @@ under the License.
                   <attributes>
                     <pdf-stylesdir>${basedir}/src/main/asciidoc</pdf-stylesdir>
                     <pdf-style>syncope</pdf-style>
-                    <imagesdir>${basedir}/src/main/asciidoc/images</imagesdir>
+                    <imagesdir>${rootpom.basedir}/target/generated-docs/images</imagesdir>
                   </attributes>
                 </configuration>
               </execution>
@@ -2817,42 +2846,8 @@ under the License.
       </activation>
 
       <properties>
-        <argLine>-Xms512m -Xmx1024m -Xss256k -Dnet.bytebuddy.experimental=true --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+        <argLine>-Xms512m -Xmx1024m -Xss256k --add-opens java.base/java.net=ALL-UNNAMED</argLine>
       </properties>
-
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <release>16</release>
-                <fork>true</fork>
-                <compilerArgs>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                  <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
-                </compilerArgs>
-                <annotationProcessorPaths>
-                  <path>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok</artifactId>
-                    <version>1.18.18</version>
-                  </path>
-                </annotationProcessorPaths>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
     </profile>
   </profiles>
 
